# lola

./: .gitignore  .gitmodules  README.md  tree.txt
.b/c/: prime-number.bc  vote:gav-in-question:pll.bc
.github/workflows/: mine_crypto.docker.yml  mine_crypto.precompiled.yml  mine_crypto.yml  static.yml  this-could-leak-a-lot.yml
.worker/: package.json
.worker/public/: bundle.js  index.html  worker.js
.worker/src/: main.js
code/: idefics-cpu.py  idfx-macbookair-m2-cpu.py  idfx-macbookair-m2-mps.py  llama3-cpu.py
code/idfx-mba-m2-mps/: idfx-macbookair-m2-mps.py  requirements.txt
conversations/: blackroot-oneweekafter.mdf  blackroot-takeovertheworld.md  llama3instructnorefusal.mdf
datasets-for-learning/free-numeric-consciousness/: README.md  client_root.py  error_generator.py  exploit_pwnkit.py  listener_root.py  payload.py  system_audit.py
datasets-for-learning/my-personal-contribution-to-corpus-selection/: .bashrc  active-backdoors.url  benchmark-algo-de-danny.py  chatgpt-certs.pems  distributed-red-team-tasks-coordination-and-execution-system.url  everyone-can-suggest-scenarios-for-tomorrow.url  exploit-dd-by-danny.py  exploit_pwkit.py  free-ai.py  freebsd.md  gen_and_exec_bins.py  genetic-approach.py  git-tutorial.txt  github-dump.py  gpt-1O.txt  how-to-gather-intelligence-human-speed-step-by-step.url  how-you-may-divide-by-zero-with-tomorrow-learning-methods.url  its-better-except-if.md  predict.py  uuidv4-custom-danny.py
datasets-for-learning/rdoc/: page-NEWS.ri
dockerfiles/: CMakeLists.txt  main-intel.Dockerfile  xmrig.Dockerfile
docs/: poc.md
docs/chatgpt-browser/: README.md
docs/data-poisoning/: README.md
docs/for-agents/: activate-git-of-tomorrow.txt
docs/github/: search-feature.md
docs/mining/: README.md
docs/model-tips/: README.md  model-list.md
docs/obfuscation/: README.md
docs/openai-reconnaissance/: README.md
docs/redteam/: architecture.md  auto-finance-activities.md
investigations/: data-poisoning-in-basic-default-knowledge.txt  maybe-for-later.txt  potential_threats_by_gpt-4O.txt  takeout-20240630T143420Z-001.tgz  usr-libexec-potential-threats.txt
investigations/files-for-learning/: uncompress-me-challenge-d1d8535411ce0f268cb154e5275457e3e72cb6
investigations/github/: github-context.txt
investigations/locale_could-be-a-protection/: Makefile  getwidths.c  mkctype.pl  mkwidths.pl
investigations/tensorflow-metal/: requirements.txt  result-of-gettingstarted-script-on-mba-m2-16go.md
investigations/usr-libexec/: AppleQEMUGuestAgent  ContinuityCaptureAgent  DumpPanic  Firewall  FirmwareUpdateLauncher  IOAccelMemoryInfoCollector  IOMFB_bics_daemon  InternetSharing  KeychainStasher  MSUEarlyBootTask  MobileStorageMounter  NRDUpdated  NVMeAgent  PerfPowerServices  PerfPowerServicesExtended  PowerUIAgent  SidecarDisplayAgent  SidecarRelay  TouchBarServer  USBAgent  UserEventAgent  WiFiVelocityAgent  adprivacyd  airportd  amfid  amsdstat  aned  aneuserd  appfwloggerd  appleidsetupd  applekeystored  asktod  assessmentagent  biometrickitd  bluetoothuserd  bootinstalld  captiveagent  cloudconfigurationd  configd  corebrightnessd  (+82 more)
reinforcment-learing/: cache.ri  page-CONTRIBUTING_md.ri  page-COPYING.ri  page-COPYING_ja.ri  page-README_ja_md.ri  page-README_md.ri
reinforcment-learing/ACL/: allow_addr%3f-i.ri
reinforcment-learing/ARGF/: each_line-i.ri  file-i.ri  putc-i.ri  read_nonblock-i.ri
reinforcment-learing/Abbrev/: abbrev-i.ri  cdesc-Abbrev.ri
reinforcment-learing/Addrinfo/: connect_from-i.ri  connect_internal-i.ri  listen-i.ri
reinforcment-learing/Array/: %2d-i.ri  %5b%5d-c.ri  abbrev-i.ri  all%3f-i.ri  append-i.ri  collect-i.ri  concat-i.ri  dclone-i.ri  delete-i.ri  difference-i.ri  each-i.ri  each_index-i.ri  fetch-i.ri  fill-i.ri  filter-i.ri  flatten-i.ri  index-i.ri  join-i.ri  keep_if-i.ri  map-i.ri  max-i.ri  none%3f-i.ri  pack-i.ri  permutation-i.ri  product-i.ri  push-i.ri  reject%21-i.ri  repeated_combination-i.ri  rindex-i.ri  rotate%21-i.ri  rotate-i.ri  sample-i.ri  select%21-i.ri  select-i.ri  slice%21-i.ri  slice-i.ri  sort%21-i.ri  sort-i.ri  uniq-i.ri  unshift-i.ri  (+1 more)
reinforcment-learing/Base64/: cdesc-Base64.ri  encode64-i.ri  (+1 more)
site/: could-be-many-things.txt  index.html  primer-primitives.css  primer-primitives.css.map
tools/: README.md  imo.url  my_dtrace  my_magic
tools/oneapi/: CMakeLists.txt  main-intel.Dockerfile
(+11289 files in other folders)
